# AcademyVault

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/config/: settings.py  urls copy.py  urls.py
backend/core/: models.py  serializers.py  views.py
backend/educontent/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/educontent/migrations/: 0001_initial.py
backend/subscriptions/: admin.py  models.py  serializers.py  urls.py  views.py  webhooks copy.py  webhooks.py
backend/subscriptions/migrations/: 0001_initial.py  0002_usersubscription_stripe_customer_id.py  0003_tier_is_default_tier_level_and_more.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  axiosClient.js  router.jsx
frontend/src/components/: AuthLayout.jsx  GuestLayout.jsx  Navbar.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: Cancel.jsx  Checkout.jsx  Home.jsx  Login.jsx  Success.jsx  Tiers.jsx  Welcome.jsx
